<resources>
    <string name="app_name">Plant</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_info">Info</string>
    <string name="title_support">Support</string>
    <string name="title_basket">Basket</string>
    <string name="text">text</string>


    <!---dialog names-->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>

    <!---firebase message-->
    <string name="auth_failed"> Field to Authenticate</string>
    <string name="auth_success"> Authenticate Success</string>

    <!---Firebase database fields-->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_setting">user_account_setting</string>
    <string name="field_username">username</string>

    <!--Intent Extras -->
    <string name="calling_activity">calling_activity</string>

    <!-- activity names-->
    <string name="profile_activity">Profile Activity</string>

    <!--strings-->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>


</resources>