<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />
    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support" />
    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/title_basket" />

</menu>